# buildhub

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  BUILD  Makefile  README.md  WORKSPACE  go.mod  go.sum  gqlgen.yml  main.go  repositories.bzl  server.go  wire.go  wire_gen.go
.theia/: launch.json
core-be/: BUILD  go.mod  go.sum  gqlgen.yml  server.go  wire.go  wire_gen.go
core-be/examples/: get-all-item-specs-for-a-game.gql
core-be/graph/: BUILD.bazel  converter.go  resolver.go  schema.resolvers.go
core-be/graph/model/: BUILD.bazel
core-be/item/: BUILD.bazel  model.go
graph/: converter.go  resolver.go  schema.graphqls  schema.resolvers.go
graph/model/: models_gen.go
item/: item_spec.go  model.go  repository.go
item/data/: shopping.yml  super-mario.yml
items/: item_spec.go  super-mario.yml
items/data/: super-mario.yml
scripts/: init.sh
