load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = [
        "converter.go",
        "resolver.go",
        "schema.resolvers.go",
    ],
    importpath = "github.com/buildhub-gg/buildhub/core-be/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//core-be/build",
        "//core-be/graph/generated",
        "//core-be/graph/model",
        "//core-be/item",
    ],
)
